--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
     <head>
         <title>PetLife</title>
         <meta name="description" content="Garanta uma vida longa e cheia de alegria para o seu melhor amigo"/>
+
+        <link rel="stylesheet" href="index.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <a href="index.html">
-                <img src="img/logo.svg" alt="PetLife"/>
+                <img src="img/logo-white.svg" alt="PetLife"/>
             </a>
 
             <nav>
@@ -25,19 +31,21 @@
 
                 <div>
                     <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
-                    <p>
+                    <p class="paragrafo">
                         A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e
                         serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação.
                     </p>
-                    <a href="https://wa.me/5527999005199" target="_blank">Marque uma consulta</a>
-                    <a href="#clinica">Conheça nossa Clínica</a>
+                    <a class="botao" href="https://wa.me/5527999005199" target="_blank">Marque uma consulta</a>
+                    <a class="botao-transparente" href="#clinica">Conheça nossa Clínica</a>
                 </div>
+
+                <img class="absolute" src="img/shape.svg" alt="">
             </section>
 
             <section id="clinica">
                 <div>
                     <h2>Cuidado Veterinário de Qualidade</h2>
-                    <p>
+                    <p class="paragrafo">
                     Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários.
                     Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos
                     serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute
@@ -52,15 +60,14 @@
                         <li>Atendimento de emergência 24 horas</li>
                         <li>Nutrição e aconselhamento alimentar personalizado</li>
                       </ul>
-
-                    <img src="img/clinic-img.svg" alt="" width="480" height="480" loading="lazy">
                 </div>
+                <img src="img/clinic-img.svg" alt="" width="480" height="480" loading="lazy">
             </section>
 
             <section id="farmacia">
                 <h2>Venha conferiro nosso petshop e farmácia</h2>
                 <img src="img/shop-img.svg" alt="" width="645" height="430" loading="lazy"/>
-                <p>
+                <p class="paragrafo">
                     Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso
                     petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos
                     deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará
@@ -77,10 +84,10 @@
                 <div>
                     <h2>Ficou alguma dúvida?</h2>
 
-                    <div>
+                    <div class="duvida">
                         <h3>Quais serviços são oferecidos pela clínica da PetLife?</h3>
                         <img src="img/arrow-down.svg" alt=""/>
-                        <p>
+                        <p class="paragrafo">
                             A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação,
                             cirurgias,
                             tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de
@@ -88,28 +95,28 @@
                             para garantir a saúde e o bem-estar do seu pet.
                         </p>
                     </div>
-                    <div>
+                    <div class="duvida">
                         <h3>Quais espécies de animais a clínica veterinária atende?</h3>
                         <img src="img/arrow-down.svg" alt="">
-                        <p>
+                        <p class="paragrafo">
                           A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos,
                           pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de
                           diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.
                         </p>
                       </div>
-                      <div>
+                      <div class="duvida">
                         <h3>A clínica da PetLife possui serviços de emergência?</h3>
                         <img src="img/arrow-down.svg" alt="">
-                        <p>
+                        <p class="paragrafo">
                           Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação
                           precisar de atendimento veterinário imediato fora do horário de expediente, nossa equipe está pronta para
                           ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.
                         </p>
                       </div>
-                      <div>
+                      <div class="duvida">
                         <h3>A clínica oferece serviços de banho e tosa?</h3>
                         <img src="img/arrow-down.svg" alt="">
-                        <p>
+                        <p class="paragrafo">
                           Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de
                           profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e
                           técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet, além de
@@ -128,7 +135,7 @@
 
 
             <div>
-                <strong>Links Rápidos</strong>
+                <strong class="titulo">Links Rápidos</strong>
                 <nav>
                     <a href="#inicio">Início</a>
                     <a href="#clinica">Clínica</a>
@@ -139,14 +146,14 @@
 
 
             <div>
-                <strong>Encontre-nos</strong>
+                <strong class="titulo">Encontre-nos</strong>
                 <p>Whatsapp: <a href="https://wa.me/5527999005199" target="_blank">(27) 99900-5199</a></p>
                 <p>Email: <a href="mailto:contato@petlife.com">contato@petlife.com</a></p>
                 <p>Endereço: Av. 7 de Setembro, n° 42, Centro</p>
             </div>
         </footer>
 
-        <div>
+        <div id="copyright">
             Desenvolvido por <a href="https://github.com/rodriguesfiorotti" target="_blank">@rodriguesfiorotti</a> na trilha Start na Programação 🤘 da OneBitCode.
         </div>
     </body>
