--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <main>
             <section id="inicio">
-                <img src="img/start-img.svg" alt="Imagem principal" width="580" height="580"/>
+                <img src="img/start-img.svg" alt="Imagem principal" width="580" height="580" onclick="alert('Você clicou na imagem!')"/>
 
                 <div>
                     <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
@@ -156,6 +156,8 @@
         <div id="copyright">
             Desenvolvido por <a href="https://github.com/rodriguesfiorotti" target="_blank">@rodriguesfiorotti</a> na trilha Start na Programação 🤘 da OneBitCode.
         </div>
+
+        <script src="index.js"></script>
     </body>
 
 </html>
